--- a/halaman.html
+++ b/halaman.html
@@ -165,17 +165,40 @@
 
         <div class="grid md:grid-cols-2 gap-8">
             <div class="bg-slate-900 border border-slate-800 rounded-2xl p-8">
-                <h4 class="text-xl font-semibold mb-3">🏫 Berguna untuk Kampus</h4>
-                <p class="text-slate-400">
-                    Solusi mendukung kegiatan akademik, administrasi, atau organisasi kampus.
-                </p>
+                <h3 class="text-xl font-semibold mb-3">🏫 Berguna untuk Kampus</h4>
+                    <p class="text-slate-400">Project yang dikembangkan di <span
+                            class="font-semibold text-white">SPINOTEK
+                            Vibecoding Hackathon Vol. 02</span>
+                        diharapkan mampu memberikan manfaat nyata bagi lingkungan
+                        Politeknik Hasnur</p><br>
+                    <ul class="space-y-2 text-slate-400">
+                        <li>• Mendukung aktivitas akademik mahasiswa</li>
+                        <li>• Membantu proses administrasi kampus</li>
+                        <li>• Mempermudah komunikasi antar civitas akademika</li>
+                        <li>• Membangun prototype untuk kampus & bisnis</li>
+                        <li>• Menambah project nyata untuk portfolio</li>
+                    </ul><br>
+                    <p class="text-slate-400">Solusi yang dibuat tidak harus
+                        berskala besar, namun <span class="text-white font-semibold">relevan, aplikatif, dan bisa
+                            diterapkan</span> sesuai kebutuhan Politeknik Hasnur.</p>
             </div>
 
             <div class="bg-slate-900 border border-slate-800 rounded-2xl p-8">
                 <h4 class="text-xl font-semibold mb-3">🏢 Berguna untuk Bisnis</h4>
-                <p class="text-slate-400">
-                    Memiliki potensi diterapkan dalam dunia usaha atau perusahaan.
+                <p class="text-lg font-bold text-white mb-4">
+                    Platform Digital yang Mendukung Habit Gen-Z
                 </p>
+                <p class="text-slate-400">
+                    Melalui <span class="text-white font-semibold">SPINOTEK Vibecoding Hackathon Vol. 02</span>,
+                    peserta ditantang membangun platform digital yang selaras dengan habit Gen-Z, seperti:
+                </p><br>
+                <ul class="space-y-2 text-slate-400">
+                    <li>• 📱 Konsumsi konten cepat & visual</li>
+                    <li>• ⚡ Interaksi instan dan real-time</li>
+                    <li>• 🧠 Pengambilan keputusan berbasis experience</li>
+                    <li>• 🤝 Keterlibatan komunitas & social validation</li>
+                </ul><br>
+                <p class="text-slate-400">bukan sekadar aplikasi, tapi platform yang hidup di keseharian Gen-Z.</p>
             </div>
         </div>
     </section>
@@ -183,7 +206,7 @@
     <!-- CTA -->
     <section id="daftar" class="bg-gradient-to-r from-sky-500 to-cyan-400 text-black py-24 px-6 text-center">
         <h2 class="text-3xl md:text-4xl font-extrabold mb-4">
-            Siap Ikut Vibecoding Hackathon?
+            Siap Ikut Vibecoding Hackathon Vol. 02?
         </h2>
         <p class="max-w-2xl mx-auto mb-8">
             Daftarkan tim kamu dan tunjukkan solusi digital terbaikmu.
