--- a/halaman.html
+++ b/halaman.html
@@ -38,8 +38,9 @@
             </h1>
 
             <p class="text-slate-300 text-lg md:text-xl mb-10">
-                Ajang hackathon kolaboratif mahasiswa Politeknik Hasnur untuk
-                membangun solusi digital yang berdampak bagi kampus dan bisnis.
+                Hackathon kolaboratif bersama mahasiswa Politeknik Hasnur buat bareng-bareng ngembangin solusi digital
+                yang
+                relevan, kepake, dan berdampak buat kampus serta bisnis.
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -176,7 +177,7 @@
                         <li>• Membantu proses administrasi kampus</li>
                         <li>• Mempermudah komunikasi antar civitas akademika</li>
                         <li>• Membangun prototype untuk kampus & bisnis</li>
-                        <li>• Menambah project nyata untuk portfolio</li>
+                        <li>• mempermudah proses organisasi mahasiswa</li>
                     </ul><br>
                     <p class="text-slate-400">Solusi yang dibuat tidak harus
                         berskala besar, namun <span class="text-white font-semibold">relevan, aplikatif, dan bisa
@@ -193,12 +194,13 @@
                     peserta ditantang membangun platform digital yang selaras dengan habit Gen-Z, seperti:
                 </p><br>
                 <ul class="space-y-2 text-slate-400">
-                    <li>• 📱 Konsumsi konten cepat & visual</li>
-                    <li>• ⚡ Interaksi instan dan real-time</li>
-                    <li>• 🧠 Pengambilan keputusan berbasis experience</li>
-                    <li>• 🤝 Keterlibatan komunitas & social validation</li>
+                    <li>• Cara mereka nikmatin konten yang cepat dan visual</li>
+                    <li>• Interaksi yang serba instan dan real-time</li>
+                    <li>• Cara ngambil keputusan berdasarkan pengalaman pakai</li>
+                    <li>• Kebiasaan bangun komunitas dan cari validasi sosial</li>
                 </ul><br>
-                <p class="text-slate-400">bukan sekadar aplikasi, tapi platform yang hidup di keseharian Gen-Z.</p>
+                <p class="text-slate-400">intinya, bukan sekadar aplikasi, tapi platform yang hidup di keseharian Gen-Z.
+                </p>
             </div>
         </div>
     </section>
