--- a/halaman.html
+++ b/halaman.html
@@ -91,8 +91,8 @@
             Kenapa Harus Ikut?
         </h2>
         <p class="text-center text-slate-400 max-w-3xl mx-auto mb-16">
-            Bukan sekadar lomba ngoding. Ini tempat kamu belajar, berkolaborasi,
-            dan membangun solusi digital yang benar-benar relevan.
+            Bukan cuma soal lomba ngoding. Di sini kamu bisa belajar bareng, kolaborasi sama tim, dan bikin solusi
+            digital yang beneran kepake di dunia nyata.
         </p>
 
         <div class="grid md:grid-cols-2 gap-10">
@@ -161,7 +161,7 @@
     <!-- CRITERIA -->
     <section class="py-24 px-6 max-w-6xl mx-auto">
         <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">
-            Kriteria Project
+            Arah & Fokus Project
         </h2>
 
         <div class="grid md:grid-cols-2 gap-8">
@@ -187,11 +187,11 @@
             <div class="bg-slate-900 border border-slate-800 rounded-2xl p-8">
                 <h4 class="text-xl font-semibold mb-3">🏢 Berguna untuk Bisnis</h4>
                 <p class="text-lg font-bold text-white mb-4">
-                    Platform Digital yang Mendukung Habit Gen-Z
+                    Platform Digital yang Relevan dengan Kebiasaan Gen-Z
                 </p>
                 <p class="text-slate-400">
-                    Melalui <span class="text-white font-semibold">SPINOTEK Vibecoding Hackathon Vol. 02</span>,
-                    peserta ditantang membangun platform digital yang selaras dengan habit Gen-Z, seperti:
+                    Lewat <span class="text-white font-semibold">SPINOTEK Vibecoding Hackathon Vol. 02</span>, peserta diajak untuk membangun platform digital yang
+                    benar-benar nyambung dengan kebiasaan Gen-Z, seperti:
                 </p><br>
                 <ul class="space-y-2 text-slate-400">
                     <li>• Cara mereka nikmatin konten yang cepat dan visual</li>
