tambahan gambar logo

--- a/halaman.html
+++ b/halaman.html
@@ -28,6 +28,14 @@
         <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/60 to-slate-950"></div>
 
         <div class="relative z-10 text-center px-6 max-w-4xl">
+            <div class="flex justify-center items-center gap-6 mb-6">
+                <img src="logo/spinotek_logo_symbol.png" alt="SPINOTEK Logo" class="h-10" />
+                <div class="w-px h-7 bg-slate-700"></div>
+                <img src="logo/logo-hima-ti.png" alt="HIMA TI Logo" class="h-11" />
+                <div class="w-px h-7 bg-slate-700"></div>
+                <img src="logo/Logo Politeknik Hasnur.png" alt="Politeknik Hasnur Logo" class="h-11" />
+            </div>
+            <br><br>
             <p class="uppercase tracking-widest text-sky-400 font-semibold mb-4">
                 SPINOTEK × HIMA TI POLHAS
             </p>
@@ -190,7 +198,8 @@
                     Platform Digital yang Relevan dengan Kebiasaan Gen-Z
                 </p>
                 <p class="text-slate-400">
-                    Lewat <span class="text-white font-semibold">SPINOTEK Vibecoding Hackathon Vol. 02</span>, peserta diajak untuk membangun platform digital yang
+                    Lewat <span class="text-white font-semibold">SPINOTEK Vibecoding Hackathon Vol. 02</span>, peserta
+                    diajak untuk membangun platform digital yang
                     benar-benar nyambung dengan kebiasaan Gen-Z, seperti:
                 </p><br>
                 <ul class="space-y-2 text-slate-400">
@@ -222,7 +231,7 @@
 
     <!-- FOOTER -->
     <footer class="text-center py-6 text-slate-500 text-sm">
-        
+
     </footer>
 
 </body>
