menambahkan timeline dan link pengumpulan

--- a/halaman.html
+++ b/halaman.html
@@ -229,6 +229,61 @@
         </a>
     </section>
 
+    <!-- TIMELINE -->
+    <section class="py-24 px-6 max-w-6xl mx-auto relative">
+        <div class="absolute inset-0 -z-10 pointer-events-none">
+            <div class="absolute -top-10 -left-10 h-40 w-40 rounded-full bg-sky-500/10 blur-3xl"></div>
+            <div class="absolute -bottom-10 -right-10 h-40 w-40 rounded-full bg-cyan-400/10 blur-3xl"></div>
+        </div>
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-6">
+            Timeline Kegiatan
+        </h2>
+        <p class="text-center text-slate-400 max-w-3xl mx-auto mb-14">
+            Ringkasan tahapan hackathon dari technical meeting hingga pengumuman pemenang.
+        </p>
+
+        <div class="relative">
+            <div class="hidden md:block absolute left-0 right-0 top-1/2 -translate-y-1/2 h-px bg-gradient-to-r from-sky-400/50 via-slate-700/40 to-cyan-400/50"></div>
+            <div class="grid gap-6 md:grid-cols-3">
+                <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
+                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div class="text-sky-400 font-semibold">Kamis, 12 Februari 2026</div>
+                    <div class="mt-2 text-slate-300">Technical meeting</div>
+                </div>
+                <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
+                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div class="text-sky-400 font-semibold">Jumat, 13 Februari 2026 - Selasa, 17 Februari 2026</div>
+                    <div class="mt-2 text-slate-300">Proses pengerjaan</div>
+                </div>
+                <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
+                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div class="text-sky-400 font-semibold">Rabu, 18 Februari 2026</div>
+                    <div class="mt-2 text-slate-300">Pengumuman pemenang</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SUBMISSION -->
+    <section class="relative overflow-hidden bg-slate-900 py-24 px-6 text-center">
+        <div class="absolute inset-0 pointer-events-none">
+            <div class="absolute -top-16 left-1/2 -translate-x-1/2 h-56 w-56 rounded-full bg-sky-500/15 blur-3xl"></div>
+            <div class="absolute bottom-0 right-0 h-48 w-48 rounded-full bg-cyan-400/10 blur-3xl"></div>
+        </div>
+        <div class="relative z-10">
+            <h2 class="text-3xl md:text-4xl font-bold mb-4">
+                Pengumpulan Project
+            </h2>
+            <p class="max-w-2xl mx-auto text-slate-400 mb-8">
+                Setelah selesai, kirimkan project tim kamu melalui tombol berikut.
+            </p>
+            <a target="_blank" href="https://spinotek.com/showcase/submit"
+                class="inline-block px-10 py-4 bg-sky-500 text-black font-bold rounded-xl hover:bg-sky-600 transition shadow-[0_0_25px_rgba(56,189,248,0.35)]">
+                Kirim Project
+            </a>
+        </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="text-center py-6 text-slate-500 text-sm">
 
