--- a/halaman.html
+++ b/halaman.html
@@ -243,20 +243,28 @@
         </p>
 
         <div class="relative">
-            <div class="hidden md:block absolute left-0 right-0 top-1/2 -translate-y-1/2 h-px bg-gradient-to-r from-sky-400/50 via-slate-700/40 to-cyan-400/50"></div>
+            <div
+                class="hidden md:block absolute left-0 right-0 top-1/2 -translate-y-1/2 h-px bg-gradient-to-r from-sky-400/50 via-slate-700/40 to-cyan-400/50">
+            </div>
             <div class="grid gap-6 md:grid-cols-3">
                 <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
-                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div
+                        class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]">
+                    </div>
                     <div class="text-sky-400 font-semibold">Kamis, 12 Februari 2026</div>
                     <div class="mt-2 text-slate-300">Technical meeting</div>
                 </div>
                 <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
-                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div
+                        class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]">
+                    </div>
                     <div class="text-sky-400 font-semibold">Jumat, 13 Februari 2026 - Selasa, 17 Februari 2026</div>
                     <div class="mt-2 text-slate-300">Proses pengerjaan</div>
                 </div>
                 <div class="relative bg-slate-900/80 border border-slate-800 rounded-2xl p-6 text-center backdrop-blur">
-                    <div class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]"></div>
+                    <div
+                        class="hidden md:block absolute left-1/2 -top-2.5 -translate-x-1/2 h-4 w-4 rounded-full bg-sky-400 shadow-[0_0_12px_rgba(56,189,248,0.6)]">
+                    </div>
                     <div class="text-sky-400 font-semibold">Rabu, 18 Februari 2026</div>
                     <div class="mt-2 text-slate-300">Pengumuman pemenang</div>
                 </div>
@@ -277,7 +285,7 @@
             <p class="max-w-2xl mx-auto text-slate-400 mb-8">
                 Setelah selesai, kirimkan project tim kamu melalui tombol berikut.
             </p>
-            <a target="_blank" href="https://spinotek.com/showcase/submit"
+            <a target="_blank" href="https://spinotek.com/showcase/submit/politeknik-hasnur"
                 class="inline-block px-10 py-4 bg-sky-500 text-black font-bold rounded-xl hover:bg-sky-600 transition shadow-[0_0_25px_rgba(56,189,248,0.35)]">
                 Kirim Project
             </a>
